--- a/PrompimanFront/src/app/bill/bill.page.html
+++ b/PrompimanFront/src/app/bill/bill.page.html
@@ -103,7 +103,7 @@
       </ion-row>
 
       <ion-item>
-        <ion-button size="default" slot="end" expand="block" (click)="cancel()">ยกเลิก</ion-button>
+        <ion-button size="default" slot="end" expand="block" color="danger" (click)="cancel()">ยกเลิก</ion-button>
         <ion-button size="default" slot="end" expand="block" (click)="ok()">ยืนยัน</ion-button>
       </ion-item>
 
