--- a/PrompimanFront/src/global.scss
+++ b/PrompimanFront/src/global.scss
@@ -34,6 +34,13 @@
   display: block;
 }
 
+.dialog-modal-4-select-room .modal-wrapper {
+  width: 75%;
+  height: 90%;
+  position: relative;
+  display: block;
+}
+
 .dialog-modal-4-setting-room .modal-wrapper {
   width: 30%;
   height: 65%;
