--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -96,7 +96,7 @@
           </ion-item>
         </ion-col>
         <ion-col size="9">
-          <ion-item *ngFor="let item of roomsnumber" style="float:left">
+          <ion-item *ngFor="let item of fg.get('rooms').value" style="float:left">
             <ion-button color="light">
               {{item.roomNo}}
             </ion-button>
@@ -207,7 +207,7 @@
         </ion-col>
         <ion-col size="2">
           <ion-item [class.invalid]="isValid('rooms')">
-            <ion-icon slot="end" (click)="room()" name="search-outline"></ion-icon>
+            <ion-icon slot="end" (click)="selectRoomModal()" name="search-outline"></ion-icon>
             <ion-icon slot="end" (click)="roomSettingModal()" name="settings-outline"></ion-icon>
           </ion-item>
         </ion-col>
