--- a/PrompimanFront/src/app/register-detail/register-detail.page.html
+++ b/PrompimanFront/src/app/register-detail/register-detail.page.html
@@ -8,7 +8,7 @@
   <!-- <form [formGroup]="fg" (ngSubmit)="handleSubmit()"> -->
   <ion-list lines="none">
 
-    <ion-row *ngIf="listdata.idCard != null" class="ion-text-left">
+    <ion-row *ngIf="listdata.idCard != ''" class="ion-text-left">
       <ion-col size="1">
       </ion-col>
       <ion-col size="2.5">
@@ -83,7 +83,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row *ngIf="listdata.idCard == null" class="ion-text-left">
+    <ion-row *ngIf="listdata.idCard == ''" class="ion-text-left">
       <ion-col size="1">
       </ion-col>
       <ion-col size="2.5">
