--- a/PrompimanFront/src/app/booking-cancel/booking-cancel.page.html
+++ b/PrompimanFront/src/app/booking-cancel/booking-cancel.page.html
@@ -31,7 +31,7 @@
     </ion-row>
 
     <ion-item>
-      <ion-button size="default" slot="end" expand="block" color="danger">ยกเลิก</ion-button>
+      <ion-button size="default" slot="end" expand="block" color="danger" (click)="cancel()">ยกเลิก</ion-button>
       <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
     </ion-item>
   </ion-list>
