--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -221,20 +221,11 @@
         </ion-col>
         <ion-col size="10">
           <ion-item>
-            <ion-input type="text" formControlName="reserve" placeholder="กรุณากรอกข้อมูล"
-              [class.invalid]="isValid('reserve')" disabled></ion-input>
+            <label>
+              {{listdataReservation.reserve}}
+            </label>
           </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="2"></ion-col>
-        <ion-col size="10">
-          <ion-item *ngIf="isValid('reserve')">
-            <span class="invalid-msg">
-              กรุณากรอกข้อมูล
-            </span>
-          </ion-item>
-        </ion-col>
+        </ion-col>        
       </ion-row>
 
       <ion-row>
