add edit register && revervation

--- a/PrompimanFront/src/app/register-detail/register-detail.page.html
+++ b/PrompimanFront/src/app/register-detail/register-detail.page.html
@@ -161,7 +161,7 @@
     <ion-item>
       <ion-button size="default" slot="end" expand="block" color="medium" (click)="editMember()">แก้ไขข้อมูล
       </ion-button>
-      <ion-button size="default" slot="end" expand="block" type="submit">Check In</ion-button>
+      <ion-button size="default" slot="end" expand="block" type="submit"  [routerLink]="['/checkin/']">Check In</ion-button>
     </ion-item>
 
     <ion-row>
