--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -65,17 +65,21 @@
             <ion-label>ห้อง</ion-label>
           </ion-item>
         </ion-col>
-        <ion-col size="8" (click)="selectRoomModal()" [class.invalid]="isValid('rooms')">
-          <ion-item *ngFor="let item of this.fg.get('rooms').value" style="float:left">
-            <ion-button color="light" disabled="true">
-              {{item.roomNo}}
-            </ion-button>
-          </ion-item>
-        </ion-col>
-        <ion-col size="2">
-          <ion-item [class.invalid]="isValid('rooms')">
-            <ion-icon slot="end" (click)="selectRoomModal()" name="search-outline"></ion-icon>
-            <ion-icon slot="end" (click)="roomSettingModal()" name="settings-outline"></ion-icon>
+        <ion-col size="10" [class.invalid]="isValid('rooms')">
+          <ion-item>
+            <ion-col size="9" (click)="selectRoomModal()">
+              <ion-item *ngFor="let item of this.fg.get('rooms').value" style="float:left">
+                <ion-button color="light" disabled="true">
+                  {{item.roomNo}}
+                </ion-button>
+              </ion-item>
+            </ion-col>
+            <ion-col size="3">
+              <ion-item>
+                <ion-icon slot="end" (click)="selectRoomModal()" name="search-outline"></ion-icon>
+                <ion-icon slot="end" (click)="roomSettingModal()" name="settings-outline"></ion-icon>
+              </ion-item>
+            </ion-col>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -125,7 +129,7 @@
           </ion-item>
         </ion-col>
       </ion-row> -->
-      
+
 
       <ion-row class="ion-padding">
         <ion-col size="5.5">
