--- a/PrompimanFront/src/app/checkin/checkin.page.html
+++ b/PrompimanFront/src/app/checkin/checkin.page.html
@@ -5,10 +5,102 @@
 </ion-header>
 
 <ion-content>
-  <ion-item lines="none">
-    <ion-button size="default" (click)="roomSetting()" slot="end" expand="block" type="submit">
-      <ion-icon name="settings"></ion-icon>
-      Setting
-    </ion-button>
-  </ion-item>
+  <ion-list lines="none">
+    <ion-item lines="none">
+      <ion-button size="default" (click)="roomSetting()" slot="end" expand="block" type="submit">
+        <ion-icon name="settings"></ion-icon>
+        ค้นหาสมาชิก
+      </ion-button>
+    </ion-item>
+    <!-- <form [formGroup]="fg" (ngSubmit)="handleSubmit()"> -->
+    <ion-row>
+      <ion-col size="1">
+      </ion-col>
+      <ion-col size="2.5">
+        <ion-img class="img-size" [src]=urlPhoto class="img-responsive" alt="Image"></ion-img>
+      </ion-col>
+      <ion-col size="2">
+        <ion-item>
+          <ion-label>ข้อมูลผู้เข้าพักโรงแรม</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>ชื่อ-สกุล</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>เบอร์โทรศัพท์</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>เงินสำรองจ่าย</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>กรุ๊ป</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>วันที่เข้า</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>วันที่ออก</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>ห้อง</ion-label>
+        </ion-item>
+        <ion-item class="ion-text-left">
+          <ion-label>ค่ามัดจัด</ion-label>
+          <ion-checkbox slot="start" checked="true"></ion-checkbox>
+        </ion-item>
+        <ion-item class="ion-text-left">
+          <ion-label>ใบกำกับภาษี</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+      </ion-col>
+      <ion-col size="6.5" class="ion-text-left">
+        <ion-item>
+          <ion-label></ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>ชื่อ-สกุล</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>เบอร์โทรศัพท์</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>เงินสำรองจ่าย</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>กรุ๊ป</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>วันที่เข้า</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>02/06/2555</ion-label>
+        </ion-item>
+
+        <ion-row>
+        <ion-col size="9">
+          <ion-item >
+            <ion-button color="light">
+              111 222 333 444 444 444 444 444 444 444 444 444 444 444 444 
+            </ion-button>
+          </ion-item>
+        </ion-col>
+        <ion-col size="3">
+          <ion-item >
+            <!-- [class.invalid]="isValid('rooms')" -->
+            <ion-icon slot="end" (click)="selectRoomModal()" name="search-outline"></ion-icon>
+            <ion-icon slot="end" (click)="roomSetting()" name="settings-outline"></ion-icon>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+        <ion-item lines="none">
+          <ion-button size="default" (click)="roomSetting()" slot="start" expand="block" type="submit">
+            <ion-icon name="settings"></ion-icon>
+            ข้อมูลการจอง
+          </ion-button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-list>
+  <!-- </form> -->
 </ion-content>
