--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -1,8 +1,10 @@
-<ion-header>
+<ion-header translucent>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""></ion-back-button>
+    </ion-buttons>
     <ion-title *ngIf="isCancel2 == 'edit'">แก้ไขข้อมูลการจอง</ion-title>
     <ion-title *ngIf="isCancel2 == 'cancel'">ยืนยันการจอง</ion-title>
-
   </ion-toolbar>
 </ion-header>
 
