--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -1,8 +1,10 @@
-<ion-header>
-  <!-- <ion-toolbar>
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""></ion-back-button>
+    </ion-buttons>
     <ion-title>เพิ่มข้อมูลการจอง</ion-title>
-  </ion-toolbar> -->
-  <app-back-to-root title="เพิ่มข้อมูลการจอง"></app-back-to-root>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
