--- a/PrompimanFront/src/app/booking/booking.page.html
+++ b/PrompimanFront/src/app/booking/booking.page.html
@@ -11,6 +11,9 @@
       <ion-icon name="add-circle-outline"></ion-icon>
       เพิ่มข้อมูลการจอง
     </ion-button>
+    <!-- <ion-badge slot="end" color="danger">
+        {{showBadge}}
+    </ion-badge> -->
   </ion-item>
 
   <ion-row class="ion-padding">
