--- a/PrompimanFront/src/app/register-detail/register-detail.page.html
+++ b/PrompimanFront/src/app/register-detail/register-detail.page.html
@@ -1,5 +1,8 @@
-<ion-header>
+<ion-header translucent>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""></ion-back-button>
+    </ion-buttons>
     <ion-title>ข้อมูลสมาชิก</ion-title>
   </ion-toolbar>
 </ion-header>
