--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -42,7 +42,7 @@
         </ion-col>
         <ion-col size="10">
           <ion-item>
-            <ion-input type="text" placeholder="กรุณากรอกข้อมูล" [class.invalid]="isValid('telephone')"
+            <ion-input type="number" placeholder="กรุณากรอกข้อมูล" [class.invalid]="isValid('telephone')"
               formControlName="telephone"></ion-input>
           </ion-item>
         </ion-col>
@@ -105,7 +105,7 @@
         </ion-col>
         <ion-col size="10">
           <ion-item>
-            <ion-input type="text" placeholder="กรุณากรอกข้อมูล" [class.invalid]="isValid('reserve')"
+            <ion-input type="number" placeholder="กรุณากรอกข้อมูล" [class.invalid]="isValid('reserve')"
               formControlName="reserve"></ion-input>
           </ion-item>
         </ion-col>
