--- a/PrompimanFront/src/app/register-information/register-information.page.html
+++ b/PrompimanFront/src/app/register-information/register-information.page.html
@@ -28,7 +28,7 @@
                     </ion-col>
                     <ion-col>
                       <ion-item>
-                        <ion-input [class.invalid]="isValidTh('idCard')" type="text" formControlName="idCard"
+                        <ion-input [class.invalid]="isValidTh('idCard')" formControlName="idCard"
                           placeholder="กรุณากรอกข้อมูล"></ion-input>
                       </ion-item>
                     </ion-col>
@@ -37,7 +37,7 @@
                     <ion-col size="2"></ion-col>
                     <ion-item *ngIf="isValidTh('idCard')">
                       <span class="invalid-msg">
-                        กรุณากรอกข้อมูล
+                        กรุณากรอกรหัสบัตรประชาชนให้ครบ 13 หลัก
                       </span>
                     </ion-item>
                   </ion-row>
@@ -150,7 +150,7 @@
                     </ion-col>
                     <ion-col>
                       <ion-item>
-                        <ion-input type="text" formControlName="telephone" placeholder="กรุณากรอกข้อมูล"
+                        <ion-input type="number" formControlName="telephone" placeholder="กรุณากรอกข้อมูล"
                           [class.invalid]="isValidTh('telephone')"></ion-input>
                       </ion-item>
                     </ion-col>
@@ -359,7 +359,7 @@
                     </ion-col>
                     <ion-col>
                       <ion-item>
-                        <ion-input type="text" formControlName="telephone" placeholder="กรุณากรอกข้อมูล"
+                        <ion-input type="number" formControlName="telephone" placeholder="กรุณากรอกข้อมูล"
                           [class.invalid]="isValidEn('telephone')"></ion-input>
                       </ion-item>
                     </ion-col>
